Made changes on the bug on small screen size

--- a/Complete Webpage/main.css
+++ b/Complete Webpage/main.css
@@ -87,7 +87,7 @@ a.active {
         display:none;
     }
 }
-@media(max-width:1410px){
+@media screen and (min-width:524px) and (max-width:1410px){
     .topbutton{
         float:none;
         display:none;
@@ -105,9 +105,22 @@ a.active {
         position:absolute;    
     }
 }
-@media(max-width:524px){
+@media screen and (max-width:524px){
     #logo{
+        width:200px;
+        height:30px;
+    }
+    .menubut{
+        width:15px;
+        height:1.5px;
+        margin:1px 0;
+    }
+    .topbutton{
+        float:none;
         display:none;
+    }
+    .txtcontainer{
+        top:105px;
     }
 }
 
@@ -115,7 +128,6 @@ a.active {
     color:white;
     font-size:36px;
     text-align:left;
-    padding-left:50px;
 }
 .home .graphicsmenu{
     list-style-type:none;
@@ -142,8 +154,8 @@ a.active {
     font-size:40px;
 }
 .login .form-signin1 {
-    width: 200px;  
-    padding: 100px;  
+    width: 250px;  
+    padding: 20px;  
     margin: 0 auto;
 }
 .login .form-signin1 .form-signin1-heading,   
